--- a/fzx_personal.html
+++ b/fzx_personal.html
@@ -74,7 +74,7 @@
 <h3 align="left">Email：fzx@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>冯泽心，男，2016年7月受聘为特别副研究员（预聘助理教授），2018年受聘为博导,2021年受聘为特别研究员（长聘副教授）。主要研究方向包括光学工程的前沿代表性方向—自由曲面光学以及深度融合应用数学、光传输物理机制以及高性能计算的计算光学。主持或参与国家重点研发计划(子课题分项负责人)、国家自然科学基金青年基金(负责人),  国家重大科研仪器研制项目(参与)等项目。在Optics Letters、Optics Express等著名光学期刊上发表多篇论文, 获较多引用与关注, 并多次受邀参加OSA、SPIE会议并作特邀报告。</p>
+<p>冯泽心，男，2016年7月受聘为特别副研究员（预聘助理教授），2018年受聘为博导，2021年受聘为特别研究员（长聘副教授）。主要研究方向包括光学工程的前沿代表性方向—自由曲面光学以及深度融合应用数学、光传输物理机制以及高性能计算的计算光学。主持或参与国家重点研发计划(子课题分项负责人)、国家自然科学基金青年基金(负责人),  国家重大科研仪器研制项目(参与)等项目。在Optics Letters、Optics Express等著名光学期刊上发表多篇论文, 获较多引用与关注, 并多次受邀参加OSA、SPIE会议并作特邀报告。</p>
 <h3>教育经历</h3>
 <p>2007.9-2012.6 工学博士, 清华大学电子工程系, 电子科学与技术专业</p>
 <p>2002.9-2006.7 理学学士, 电子科技大学物理电子学院, 应用物理专业</p>
@@ -99,28 +99,45 @@
 <h3>代表性学术成果</h3>
 <p></p>
 
-<p>[1]Zexin Feng, Dewen Cheng, and Yongtian Wang. Transferring freeform lens design into phase retrieval through intermediate irradiance transport. Optics Letters, 2019, 44(22): 5501-5504. (SCI, IF=3.887) </p>
-<p>[2]Zexin Feng, Dewen Cheng, and Yongtian Wang. Iterative wavefront tailoring to simplify freeform optical design for prescribed irradiance. Optics Letters, 2019, 44(5): 2274-2277. (SCI, IF=3.887)</p>
-<p>[3]Zexin Feng, Lei Huang, and Mali Gong. Focal-plane irradiance tailoring using the concept of Woofer-Tweeter deformable mirrors. Optics Express, 2014, 22(8): 8871-8879. (SCI, IF=3.488)</p>
-<p>[4]Zexin Feng, Lei Huang, Guofan Jin and Mali Gong. Designing double freeform optical surfaces for controlling both irradiance and wavefront. Optics Express, 2013, 21(23): 28693-28701 (2013). (SCI, IF=3.525)</p>
-<p>[5]Zexin Feng, Lei Huang, Mali Gong, and Guofan Jin. Beam shaping system design using double freeform optical surfaces. Optics Express, 2013, 21(12):14728-14735. (SCI, IF=3.525)</p>
-<p>[6]Zexin Feng, Yi Luo, and Yanjun Han. Design of LED freeform optical system for road lighting with high luminance/illuminance ratio. Optics Express, 2010, 18(21):22020-22031 (2010). (SCI, IF=3.753)</p>
-<p>[7]Zexin Feng and Lei Huang. Over compensation algorithm for laser beam shaping using a deformable freeform mirror. Optik, 2019, 198:163250. (SCI, IF=1.914)</p>
-<p>[8]Zexin Feng, Brittany D. Froese, Rongguang Liang, Dewen Cheng, and Yongtian Wang. Simplified freeform optics design for complicated laser beam shaping. Applied Optics, 2017, 56(33):9308-9314. (SCI, IF=1.791)</p>
-<p>[9]Zexin Feng, Brittany D. Froese, and Rongguang Liang. Freeform illumination lens construction following an optimal transport map. Applied Optics, 2016, 55(16):4301-4306. (SCI, IF=1.650)</p>
-<p>[10]Zexin Feng, Brittany D. Froese, Chih-Yu Huang, Donglin Ma, and Rongguang Liang. Creating unconventional geometric beams with large depth of field using double freeform-surface optics. Applied Optics, 2015, 54(20): 6277-6281. (SCI, IF=1.598)</p>
-<p>[11]Zexin Feng, Brittany D. Froese, and Rongguang Liang. Composite method for precise freeform optical beam shaping. Applied Optics, 2015, 54(31): 9364–9369. (SCI, IF=1.598)</p>
-<p>[12]Rengmao Wu, Zexin Feng, Zhenrong Zheng, Rongguang Liang, Pablo Benítez, Juan C Miñano, and Fabian Duerr. Design of Freeform Illumination Optics. Laser & Photonics, 2018, Reviews 12(7): 1700310. (SCI, IF=9.056)</p>
-<p>[13]Yi Luo, Zexin Feng, Yanjun Han, and Hongtao Li. Design of compact and smooth free-form optical system with uniform illuminance for LED source. Optics Express, 2010,18(9): 9055-9063. (SCI, IF=3.753)</p>
-<p>[14]Donglin Ma, Zexin Feng, and Rongguang Liang. Tailoring freeform illumination optics in a double-pole coordinate system. Applied Optics, 2015, 54(9): 2395-2399. (SCI, IF=1.598)</p>
-<p>[15]Donglin Ma, Zexin Feng, and Rongguang Liang. Deconvolution method in designing freeform lens array for structured light illumination. Applied Optics, 2015, 54(5): 1114-1117. (SCI, IF=1.598)</p>
-<p>[16]Donglin Ma, Zexin Feng, and Rongguang Liang. Freeform illumination lens design using composite ray mapping. Applied Optics, 2015, 54(3):498-503. (Reported by Laser Focus World) (SCI, IF=1.598)</p>
-<p>[17]Xingkun Ma, Lei Huang, Mali Gong, Qiao Xue, Zexin Feng, Ping Yan, and Qiang Liu. Orientation dependent wavefront correction system under grazing incidence. Optics Express, 2013, 21(18), 20497-20505. (SCI, IF=3.535)</p>
-<p>[18]Qiao Xue, Lei Huang, Ping Yan, Mali Gong, Zexin Feng, Yuntao Qiu, Tenghao Li, and Guofan Jin. Research on the particular temperature-induced surface shape of a National Ignition Facility deformable mirror. Applied Optics, 2013, 52(2): 280-287. (SCI, IF=1.649)</p>
-<p>[19]Liangliang Cao, Yi Luo, Yanjun Han, and Zexin Feng. Reflector design for large-size spherical surface sources. Optical Engineering, 2011, 50(2): 023001.(SCI, IF=0.959)</p>
-<p>[20]罗毅, 冯泽心, 韩彦军, 李洪涛, 钱可元, "面向半导体照明的光学," 光学学报, 2011, 31(9): 0900117.(EI)</p>
-<p>[21]司徒文畅, 韩彦军, 冯泽心, 李洪涛, 罗毅.自由表面光学系统对白光LED色温角分布的影响. 半导体光电, 2011, 32(6): 777-780 (EI)</p>
-<p>[22]Yanjun Han, Xianpeng Zhang, Zexin Feng, Keyuan Qian, Hongtao Li, Yi Luo, Xuliang Li, Guanzhi Huang, and Bingzhong Zhu. Variable-separation three dimensional freeform nonimaging optical system design based on target-to-source mapping and micro belt surface construction. Sciencepaper Online,2010, 2010: 1–9 .
+
+<p>[28]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong> 29, 29918-29935 (2021).</p>
+
+<p>[27]	Zexin Feng, Dewen Cheng, and Yongtian Wang*, "Iterative freeform lens design for optical field control," <strong>Photonics Research</strong> 9, 1775-1783 (2021).</p>
+
+
+<p>[26]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong> 60, 4165-4176 (2021).</p>
+
+<p>[25]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong> 29, 13469-13485 (2021).</p>
+
+
+<p class="class2">[24]	司佳, 冯泽心*, 程德文, 王涌天. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 40(17): 1722004, 2020.<strong> (封面文章)</strong></p>
+<p>Jia Si, Zexin Feng*, Dewen Cheng, Yongtian Wang. “Freeform Surface Beam Splitter for Discrete Spot Array with Prescribed Energy Proportion,” <strong>Acta Optica Sinica</strong>, 40(17): 1722004, 2020. <strong> (Cover paper)</strong></p>
+
+                                       
+<p> [23]	Zexin Feng, Dewen Cheng, Yongtian Wang*, “Iterative freeform lens design for prescribed irradiance on curved target,” <strong>Opto-Electronic Advances</strong>, 3(7): 200010, 2020. <strong>(Cover paper)</strong></p>
+
+<p>[22]Zexin Feng, Dewen Cheng, and Yongtian Wang. Transferring freeform lens design into phase retrieval through intermediate irradiance transport. Optics Letters, 2019, 44(22): 5501-5504. (SCI, IF=3.887) </p>
+<p>[21]Zexin Feng, Dewen Cheng, and Yongtian Wang. Iterative wavefront tailoring to simplify freeform optical design for prescribed irradiance. Optics Letters, 2019, 44(5): 2274-2277. (SCI, IF=3.887)</p>
+<p>[20]Zexin Feng, Lei Huang, and Mali Gong. Focal-plane irradiance tailoring using the concept of Woofer-Tweeter deformable mirrors. Optics Express, 2014, 22(8): 8871-8879. (SCI, IF=3.488)</p>
+<p>[19]Zexin Feng, Lei Huang, Guofan Jin and Mali Gong. Designing double freeform optical surfaces for controlling both irradiance and wavefront. Optics Express, 2013, 21(23): 28693-28701 (2013). (SCI, IF=3.525)</p>
+<p>[18]Zexin Feng, Lei Huang, Mali Gong, and Guofan Jin. Beam shaping system design using double freeform optical surfaces. Optics Express, 2013, 21(12):14728-14735. (SCI, IF=3.525)</p>
+<p>[17]Zexin Feng, Yi Luo, and Yanjun Han. Design of LED freeform optical system for road lighting with high luminance/illuminance ratio. Optics Express, 2010, 18(21):22020-22031 (2010). (SCI, IF=3.753)</p>
+<p>[16]Zexin Feng and Lei Huang. Over compensation algorithm for laser beam shaping using a deformable freeform mirror. Optik, 2019, 198:163250. (SCI, IF=1.914)</p>
+<p>[15]Zexin Feng, Brittany D. Froese, Rongguang Liang, Dewen Cheng, and Yongtian Wang. Simplified freeform optics design for complicated laser beam shaping. Applied Optics, 2017, 56(33):9308-9314. (SCI, IF=1.791)</p>
+<p>[14]Zexin Feng, Brittany D. Froese, and Rongguang Liang. Freeform illumination lens construction following an optimal transport map. Applied Optics, 2016, 55(16):4301-4306. (SCI, IF=1.650)</p>
+<p>[13]Zexin Feng, Brittany D. Froese, Chih-Yu Huang, Donglin Ma, and Rongguang Liang. Creating unconventional geometric beams with large depth of field using double freeform-surface optics. Applied Optics, 2015, 54(20): 6277-6281. (SCI, IF=1.598)</p>
+<p>[12]Zexin Feng, Brittany D. Froese, and Rongguang Liang. Composite method for precise freeform optical beam shaping. Applied Optics, 2015, 54(31): 9364–9369. (SCI, IF=1.598)</p>
+<p>[11]Rengmao Wu, Zexin Feng, Zhenrong Zheng, Rongguang Liang, Pablo Benítez, Juan C Miñano, and Fabian Duerr. Design of Freeform Illumination Optics. Laser & Photonics, 2018, Reviews 12(7): 1700310. (SCI, IF=9.056)</p>
+<p>[10]Yi Luo, Zexin Feng, Yanjun Han, and Hongtao Li. Design of compact and smooth free-form optical system with uniform illuminance for LED source. Optics Express, 2010,18(9): 9055-9063. (SCI, IF=3.753)</p>
+<p>[9]Donglin Ma, Zexin Feng, and Rongguang Liang. Tailoring freeform illumination optics in a double-pole coordinate system. Applied Optics, 2015, 54(9): 2395-2399. (SCI, IF=1.598)</p>
+<p>[8]Donglin Ma, Zexin Feng, and Rongguang Liang. Deconvolution method in designing freeform lens array for structured light illumination. Applied Optics, 2015, 54(5): 1114-1117. (SCI, IF=1.598)</p>
+<p>[7]Donglin Ma, Zexin Feng, and Rongguang Liang. Freeform illumination lens design using composite ray mapping. Applied Optics, 2015, 54(3):498-503. (Reported by Laser Focus World) (SCI, IF=1.598)</p>
+<p>[6]Xingkun Ma, Lei Huang, Mali Gong, Qiao Xue, Zexin Feng, Ping Yan, and Qiang Liu. Orientation dependent wavefront correction system under grazing incidence. Optics Express, 2013, 21(18), 20497-20505. (SCI, IF=3.535)</p>
+<p>[5]Qiao Xue, Lei Huang, Ping Yan, Mali Gong, Zexin Feng, Yuntao Qiu, Tenghao Li, and Guofan Jin. Research on the particular temperature-induced surface shape of a National Ignition Facility deformable mirror. Applied Optics, 2013, 52(2): 280-287. (SCI, IF=1.649)</p>
+<p>[4]Liangliang Cao, Yi Luo, Yanjun Han, and Zexin Feng. Reflector design for large-size spherical surface sources. Optical Engineering, 2011, 50(2): 023001.(SCI, IF=0.959)</p>
+<p>[3]罗毅, 冯泽心, 韩彦军, 李洪涛, 钱可元, "面向半导体照明的光学," 光学学报, 2011, 31(9): 0900117.(EI)</p>
+<p>[2]司徒文畅, 韩彦军, 冯泽心, 李洪涛, 罗毅.自由表面光学系统对白光LED色温角分布的影响. 半导体光电, 2011, 32(6): 777-780 (EI)</p>
+<p>[1]Yanjun Han, Xianpeng Zhang, Zexin Feng, Keyuan Qian, Hongtao Li, Yi Luo, Xuliang Li, Guanzhi Huang, and Bingzhong Zhu. Variable-separation three dimensional freeform nonimaging optical system design based on target-to-source mapping and micro belt surface construction. Sciencepaper Online,2010, 2010: 1–9 .
 </p>
 
 
