--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,32 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <p></p>
                                        
 
+
+<p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong> 30, 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
+
+<p>[68]	Dewen Cheng, Jiaxi Duan, Hailong Chen, He Wang, Danyang Li, Qiwei Wang, Qichao Hou, Tong Yang, Weihong Hou, Donghua Wang, Xiaoyu Chi, Bin Jiang, and Yongtian Wang*, "Freeform OST-HMD system with large exit pupil diameter and vision correction capability," <strong>Photonics Research</strong> 10, 21-32 (2022).<a href="https://doi.org/10.1364/PRJ.440018"> DOI: 10.1364/PRJ.440018</a></p>
+
+<p>[67]	Dewen Cheng, Qiwei Wang, Yue Liu, Hailong Chen, Dongwei Ni, Ximeng Wang, Cheng Yao, Qichao Hou, Weihong Hou, Gang Luo, and Yongtian Wang*, "Design and manufacture AR head-mounted displays: A review and outlook," <strong>Light: Advanced Manufacturing</strong> 2, 24 (2021).<a href="https://doi.org/10.37188/lam.2021.024"> DOI: 10.37188/lam.2021.024</a></p>
+
+<p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li, and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
+
+<p>[65]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong> 29, 29918-29935 (2021).<a href="https://doi.org/10.1364/OE.431899"> DOI: 10.1364/OE.431899</a></p>
+
+<p>[64]	Zexin Feng, Dewen Cheng, and Yongtian Wang*, "Iterative freeform lens design for optical field control," <strong>Photonics Research</strong> 9, 1775-1783 (2021).<a href="https://doi.org/10.1364/PRJ.430221"> DOI: 10.1364/PRJ.430221</a></p>
+
+<p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a><strong> (Editors' Pick)</strong></p>
+
+<p>[62]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
+
+<p>[61]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
+
+<p>[60]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong> 60, 4165-4176 (2021).<a href="https://doi.org/10.1364/AO.422384"> DOI: 10.1364/AO.422384</a></p>
+
+<p>[59]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong> 29, 13469-13485 (2021).<a href="https://doi.org/10.1364/OE.423629"> DOI: 10.1364/OE.423629</a></p>
+
+<p>[58]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong> 3, 100072 (2021).<a href="https://doi.org/10.1016/j.rio.2021.100072"> DOI: 10.1016/j.rio.2021.100072</a></p>
+
+
 <p>[57]	Cheng Yao, Dewen Cheng*, and Yongtian Wang, "Matrix optics representation and imaging analysis of a light-field near-eye display," <strong>Optics Express</strong> 28, 39976-39997 (2020).<a href="https://doi.org/10.1364/OE.411997"> DOI: 10.1364/OE.411997</a></p>
 
 <p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Optics Express</strong> 28, 35376-35394 (2020).<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
