--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,10 @@ a:active {
 										<h2 class="major"><span>期刊论文</span></h2>
 
 
+<h3>2022年</h3>
+
+<p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong> 30, 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
+
 <h3>2021年</h3>
 
 <p>[68]	Dewen Cheng, Jiaxi Duan, Hailong Chen, He Wang, Danyang Li, Qiwei Wang, Qichao Hou, Tong Yang, Weihong Hou, Donghua Wang, Xiaoyu Chi, Bin Jiang, and Yongtian Wang*, "Freeform OST-HMD system with large exit pupil diameter and vision correction capability," <strong>Photonics Research</strong> 10, 21-32 (2022).<a href="https://doi.org/10.1364/PRJ.440018"> DOI: 10.1364/PRJ.440018</a></p>
@@ -117,7 +121,7 @@ a:active {
 
 <p>[61]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
 
-<p>[60]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong> 60, 4165-4176 (2021).<a href="https://doi.org/10.1364/AO.4223842"> DOI: 10.1364/AO.422384</a></p>
+<p>[60]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong> 60, 4165-4176 (2021).<a href="https://doi.org/10.1364/AO.422384"> DOI: 10.1364/AO.422384</a></p>
 
 <p>[59]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong> 29, 13469-13485 (2021).<a href="https://doi.org/10.1364/OE.423629"> DOI: 10.1364/OE.423629</a></p>
 
