--- a/yt_personal.html
+++ b/yt_personal.html
@@ -74,7 +74,7 @@
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、国家重点研发计划等项目。以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2020影响因子13.714）、Optics Express等期刊发表论文20余篇。已获得授权发明专利30余项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
+<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、北京市自然科学基金、国家重点研发计划等项目。以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021影响因子17.782）、Optics Express等期刊发表论文20余篇。已获得授权发明专利30余项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
@@ -85,7 +85,7 @@
 <p>2017.08-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
 <h3>研究领域</h3>
-<p>自由曲面光学、光学设计、光学成像、机器学习、衍射光学</p>
+<p>自由曲面光学、光学设计、光学成像、机器学习、增强现实、衍射与微纳光学</p>
 
 <h3>主讲课程</h3>
 <p>主讲本科生课程《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
@@ -122,7 +122,7 @@
 
 <p>[12] Tong Yang, Dewen Cheng*, and Yongtian Wang, "Aberration analysis for freeform surface terms overlay on general decentered and tilted optical surfaces," <strong>Optics Express</strong> 26(6), 7751-7770 (2018).</p>
 
-<p>[13] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). <strong>(Nature旗下期刊，2020影响因子13.714)</strong></p>
+<p>[13] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). <strong>(Nature旗下期刊，2021影响因子17.782)</strong></p>
 
 <p>[14] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of freeform imaging systems with linear field-of-view using a construction and iteration process,” <strong>Optics Express</strong> 22, 3362-3374 (2014).</p>
 
@@ -152,6 +152,7 @@
 <p>[31]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong> 60, 4165-4176 (2021).</p>
 <p>[32]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).</p>
 <p>[33]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong> 3, 100072 (2021).</p>
+<p>[34]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong> 30, 825-845 (2022).</p>
 
 
 
