--- a/yt_personal.html
+++ b/yt_personal.html
@@ -153,6 +153,7 @@
 <p>[32]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).</p>
 <p>[33]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong> 3, 100072 (2021).</p>
 <p>[34]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong> 30, 825-845 (2022).</p>
+<p>[35]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong> 30, 6584-6602 (2022).</p>
 
 
 
