--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -119,7 +119,7 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
                                        
-
+<p>[70]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong> 30, 6584-6602 (2022).<a href="https://doi.org/10.1364/OE.452747"> DOI: 10.1364/OE.452747</a></p>
 
 <p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong> 30, 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
 
