--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -118,6 +118,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 
 <h3>代表性学术成果</h3>
 <p></p>
+
+<p>[71]	Dewen Cheng, Chen Xu*, Tong Yang*, and Yongtian Wang, "Off-axis reflective imaging system design with a conicoid-based freeform surface," <strong>Optics Express</strong> 30, 9590-9603 (2022).<a href="https://doi.org/10.1364/OE.455336"> DOI: 10.1364/OE.455336</a></p>
                                        
 <p>[70]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong> 30, 6584-6602 (2022).<a href="https://doi.org/10.1364/OE.452747"> DOI: 10.1364/OE.452747</a></p>
 
