--- a/yt_personal.html
+++ b/yt_personal.html
@@ -97,15 +97,17 @@
 <p></p>
 
 
-<p>[1]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<strong> (Editors' Pick)</strong></p>
+<p>[1]	Dewen Cheng, Chen Xu*, Tong Yang*, and Yongtian Wang, "Off-axis reflective imaging system design with a conicoid-based freeform surface," <strong>Optics Express</strong> 30, 9590-9603 (2022).</p>
 
-<p>[2]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).</p>
+<p>[2]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<strong> (Editors' Pick)</strong></p>
 
-<p>[3]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).</p>
+<p>[3]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).</p>
 
-<p>[4]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28, 30309-30323 (2020).</p>
+<p>[4]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).</p>
 
-<p>[5] Yingzhe Duan, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method for nonsymmetric imaging optics consisting of freeform-surface-substrate phase elements," <strong>Optics Express</strong> 28, 1603-1620 (2020).</p>
+<p>[5]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28, 30309-30323 (2020).</p>
+
+<p>[6] Yingzhe Duan, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method for nonsymmetric imaging optics consisting of freeform-surface-substrate phase elements," <strong>Optics Express</strong> 28, 1603-1620 (2020).</p>
 
 <p class="class2">[6]	杨通, 段璎哲, 程德文, 王涌天*. 自由曲面成像光学系统设计:理论、发展与应用,” <strong>光学学报</strong>, 41(1): 0108001, 2020.<strong> (特邀综述)</strong></p>
 <p>Tong Yang, Yingzhe Duan, Dewen Cheng, Yongtian Wang*. “Freeform Imaging Optical System Design: Theories, Development, and Applications,” <strong>Acta Optica Sinica</strong>, 41(1): 0108001, 2020. <strong> (Invited review)</strong></p>
