--- a/news.html
+++ b/news.html
@@ -60,7 +60,9 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
  
- 
+
+
+<p>[2022-05-20] 我们有关基于自由波面调控全息元件的离轴反射成像系统设计与研制的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>  
 <p>[2022-03-09] 我们有关二次曲面基底自由曲面离轴成像系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p> 
 <p>[2022-02-14] 我们有关紧凑型沉浸式大出瞳直径VR系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2022-01-20] 在第二届“天瞐杯”先进光学遥感设计大赛中，实验室派出的参赛队伍获得<strong>先进光学设计及光电检测组第1名、第3名与优秀奖各1项，新型空间光学遥感技术组优秀奖1项</strong>。</p>                                       
