--- a/cc_personal.html
+++ b/cc_personal.html
@@ -74,15 +74,17 @@
 <h3 align="left">Email：cheng.chi@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>池骋，男，博士，北京理工大学光电学院特别副研究员、硕士生导师。</p>
-
+<p>池骋，男，博士，北京理工大学光电学院副研究员，硕士生导师。在光学成像和微纳光学领域从事教学和科研工作，主要研究方向包括新型光学成像、微纳光学、衍射光学等方面。主持或作为骨干参与北理工青年教师启动计划、国家重点研发计划、国家自然科学基金委重大科研仪器专项等项目。以第一作者(含共一)在Science Advances(Science子刊)、Small、Advanced Optical Materials、Optics Express等国际期刊上发表多篇论文，在Physical Review Letters、Advanced Science、Journal of Physical Chemistry C等国际期刊上发表合作论文，相关工作被Nature Reviews Materials, Chemical Reviews, Chemical Society Reviews, Science Advances, Physical Review Letters等期刊评述引用。多次在国际学术会议上作口头报告。入选教育部“珠峰计划”人才培养、曾担任校级基础学科拔尖人才计划物理方向学生负责人；入选第69届德国林岛诺贝尔奖获得者大会中国代表团、林岛学者。</p>
+<h3>教育经历</h3>
+<p>2016.09-2021.07，北京大学，凝聚态物理专业，博士</p>
+<p>2012.09-2016.07，中山大学，光信息科学与技术专业，学士</p>
 
 <h3>工作经历</h3>
 
 <p>2021.09-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
 <h3>研究领域</h3>
-<p>新型光学成像、微纳光学</p>
+<p>新型光学成像、微纳光学、衍射光学、增强现实、近场光学、深度学习</p>
 
 
 
