--- a/cc_personal.html
+++ b/cc_personal.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>杨通 - 北理工光学成像与计算实验室</title>
+		<title>池骋 - 北理工光学成像与计算实验室</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
