--- a/news.html
+++ b/news.html
@@ -61,7 +61,16 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
  
 
-
+<p>[2022-06-08] 我们有关基于高斯基曲面的多面共体自由曲面系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
+<p>[2021-06-05] 恭喜左琪、周斐艳、汪希萌、查文杰、李玉银、陈文晨六位同学顺利通过硕士学位论文答辩。</p>
+<div class="row"><div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/2022gra2.png" alt="" /></a>
+</section></div></div>
+<p>[2021-06-05] 恭喜刘悦、王其为两位同学顺利通过博士学位论文答辩。</p>
+<div class="row"><div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/2022gra1.png" alt="" /></a>
+</section></div></div>
+<p>[2022-05-31] 我们有关自由曲面成像系统设计的长文综述入选<strong>中国激光杂志社2021年主编推荐奖</strong>（7本杂志共19篇论文入选）。<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">论文链接</a></p>  
 <p>[2022-05-20] 我们有关基于自由波面调控全息元件的离轴反射成像系统设计与研制的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>  
 <p>[2022-03-09] 我们有关二次曲面基底自由曲面离轴成像系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p> 
 <p>[2022-02-14] 我们有关紧凑型沉浸式大出瞳直径VR系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
