--- a/publications.html
+++ b/publications.html
@@ -101,47 +101,48 @@ a:active {
 
 <h3>2022年</h3>
 
-<p>[73]	Tong Yang, Lijun Zhou, Dewen Cheng*, and Yongtian Wang, "Designing reflective imaging systems with multiple-surfaces-integrated elements using a Gaussian function freeform surface," <strong>Applied Optics</strong>, 61, 5215-5225 (2022).<a href="https://doi.org/10.1364/AO.460955"> DOI: 10.1364/AO.460955</a></p>
+<p>[73]	Tong Yang, Lijun Zhou, Dewen Cheng*, and Yongtian Wang, "Designing reflective imaging systems with multiple-surfaces-integrated elements using a Gaussian function freeform surface," <strong>Applied Optics</strong>, 61(17), 5215-5225 (2022).<a href="https://doi.org/10.1364/AO.460955"> DOI: 10.1364/AO.460955</a></p>
 
-<p>[72]	Tong Yang, Yongdong Wang, Dongwei Ni, Dewen Cheng*, and Yongtian Wang, "Design of off-axis reflective imaging systems based on freeform holographic elements," <strong>Optics Express</strong>, 30, 20117-20134 (2022).<a href="https://doi.org/10.1364/OE.460351"> DOI: 10.1364/OE.460351</a></p>
+<p>[72]	Tong Yang, Yongdong Wang, Dongwei Ni, Dewen Cheng*, and Yongtian Wang, "Design of off-axis reflective imaging systems based on freeform holographic elements," <strong>Optics Express</strong>, 30(11), 20117-20134 (2022).<a href="https://doi.org/10.1364/OE.460351"> DOI: 10.1364/OE.460351</a></p>
 
-<p>[71]	Dewen Cheng, Chen Xu*, Tong Yang*, and Yongtian Wang, "Off-axis reflective imaging system design with a conicoid-based freeform surface," <strong>Optics Express</strong>, 30, 9590-9603 (2022).<a href="https://doi.org/10.1364/OE.455336"> DOI: 10.1364/OE.455336</a></p>
+<p>[71]	Dewen Cheng, Chen Xu*, Tong Yang*, and Yongtian Wang, "Off-axis reflective imaging system design with a conicoid-based freeform surface," <strong>Optics Express</strong>, 30(6), 9590-9603 (2022).<a href="https://doi.org/10.1364/OE.455336"> DOI: 10.1364/OE.455336</a></p>
 
 <p>[70]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong>, 30, 6584-6602 (2022).<a href="https://doi.org/10.1364/OE.452747"> DOI: 10.1364/OE.452747</a></p>
 
-<p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong>, 30, 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
+<p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong>, 30(5), 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
 
 <h3>2021年</h3>
 
-<p>[68]	Dewen Cheng, Jiaxi Duan, Hailong Chen, He Wang, Danyang Li, Qiwei Wang, Qichao Hou, Tong Yang, Weihong Hou, Donghua Wang, Xiaoyu Chi, Bin Jiang, and Yongtian Wang*, "Freeform OST-HMD system with large exit pupil diameter and vision correction capability," <strong>Photonics Research</strong>, 10, 21-32 (2022).<a href="https://doi.org/10.1364/PRJ.440018"> DOI: 10.1364/PRJ.440018</a></p>
+<p>[68]	Dewen Cheng, Jiaxi Duan, Hailong Chen, He Wang, Danyang Li, Qiwei Wang, Qichao Hou, Tong Yang, Weihong Hou, Donghua Wang, Xiaoyu Chi, Bin Jiang, and Yongtian Wang*, "Freeform OST-HMD system with large exit pupil diameter and vision correction capability," <strong>Photonics Research</strong>, 10(1), 21-32 (2022).<a href="https://doi.org/10.1364/PRJ.440018"> DOI: 10.1364/PRJ.440018</a></p>
 
-<p>[67]	Dewen Cheng, Qiwei Wang, Yue Liu, Hailong Chen, Dongwei Ni, Ximeng Wang, Cheng Yao, Qichao Hou, Weihong Hou, Gang Luo, and Yongtian Wang*, "Design and manufacture AR head-mounted displays: A review and outlook," <strong>Light: Advanced Manufacturing</strong>, 2, 24 (2021).<a href="https://doi.org/10.37188/lam.2021.024"> DOI: 10.37188/lam.2021.024</a></p>
 
-<p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li, and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong>, 19, 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
+<p>[67]	Dewen Cheng, Qiwei Wang, Yue Liu, Hailong Chen, Dongwei Ni, Ximeng Wang, Cheng Yao, Qichao Hou, Weihong Hou, Gang Luo, and Yongtian Wang*, "Design and manufacture AR head-mounted displays: A review and outlook," <strong>Light: Advanced Manufacturing</strong>, 2(3), 24 (2021).<a href="https://doi.org/10.37188/lam.2021.024"> DOI: 10.37188/lam.2021.024</a></p>
 
-<p>[65]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong>, 29, 29918-29935 (2021).<a href="https://doi.org/10.1364/OE.431899"> DOI: 10.1364/OE.431899</a></p>
+<p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li, and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong>, 19(11), 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
 
-<p>[64]	Zexin Feng, Dewen Cheng, and Yongtian Wang*, "Iterative freeform lens design for optical field control," <strong>Photonics Research</strong>, 9, 1775-1783 (2021).<a href="https://doi.org/10.1364/PRJ.430221"> DOI: 10.1364/PRJ.430221</a></p>
+<p>[65]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong>, 29(19), 29918-29935 (2021).<a href="https://doi.org/10.1364/OE.431899"> DOI: 10.1364/OE.431899</a></p>
 
-<p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong>, 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a><strong> (Editors' Pick)</strong></p>
+<p>[64]	Zexin Feng, Dewen Cheng, and Yongtian Wang*, "Iterative freeform lens design for optical field control," <strong>Photonics Research</strong>, 9(9), 1775-1783 (2021).<a href="https://doi.org/10.1364/PRJ.430221"> DOI: 10.1364/PRJ.430221</a></p>
 
-<p>[62]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong>, 60, 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
+<p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong>, 29(17), 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a><strong> (Editors' Pick)</strong></p>
 
-<p>[61]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong>, 46, 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
+<p>[62]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong>, 60(15), 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
 
-<p>[60]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong>, 60, 4165-4176 (2021).<a href="https://doi.org/10.1364/AO.422384"> DOI: 10.1364/AO.422384</a></p>
+<p>[61]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong>, 46(10), 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
 
-<p>[59]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong> 29, 13469-13485 (2021).<a href="https://doi.org/10.1364/OE.423629"> DOI: 10.1364/OE.423629</a></p>
+<p>[60]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong>, 60(14), 4165-4176 (2021).<a href="https://doi.org/10.1364/AO.422384"> DOI: 10.1364/AO.422384</a></p>
 
-<p>[58]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong> 3, 100072 (2021).<a href="https://doi.org/10.1016/j.rio.2021.100072"> DOI: 10.1016/j.rio.2021.100072</a></p>
+<p>[59]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong>, 29(9), 13469-13485 (2021).<a href="https://doi.org/10.1364/OE.423629"> DOI: 10.1364/OE.423629</a></p>
+
+<p>[58]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong>, 3, 100072 (2021).<a href="https://doi.org/10.1016/j.rio.2021.100072"> DOI: 10.1016/j.rio.2021.100072</a></p>
 
 <h3>2020年</h3>
 
-<p>[57]	Cheng Yao, Dewen Cheng*, and Yongtian Wang, "Matrix optics representation and imaging analysis of a light-field near-eye display," <strong>Optics Express</strong> 28, 39976-39997 (2020).<a href="https://doi.org/10.1364/OE.411997"> DOI: 10.1364/OE.411997</a></p>
+<p>[57]	Cheng Yao, Dewen Cheng*, and Yongtian Wang, "Matrix optics representation and imaging analysis of a light-field near-eye display," <strong>Optics Express</strong>, 28(26), 39976-39997 (2020).<a href="https://doi.org/10.1364/OE.411997"> DOI: 10.1364/OE.411997</a></p>
 
-<p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Optics Express</strong> 28, 35376-35394 (2020).<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
+<p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Optics Express</strong>, 28(23), 35376-35394 (2020).<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
 
-<p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28, 30309-30323 (2020).<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
+<p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28(20), 30309-30323 (2020).<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
 
 <p class="class2">[54]	司佳, 冯泽心*, 程德文, 王涌天. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 40(17): 1722004, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (封面文章)</strong></p>
 <p>Jia Si, Zexin Feng*, Dewen Cheng, Yongtian Wang. “Freeform Surface Beam Splitter for Discrete Spot Array with Prescribed Energy Proportion,” <strong>Acta Optica Sinica</strong>, 40(17): 1722004, 2020. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (Cover paper)</strong></p>
@@ -176,10 +177,9 @@ a:active {
 <p>[42]	Yue Liu, Dewen Cheng*, Tong Yong, Yongtian Wang. “High precision integrated projection imaging optical design based on microlens array,” <strong>Optics Express</strong>, 27(9): 12264-12281, 2019.<a href="https://dx.doi.org/10.1364/OE.27.012264"> DOI: 10.1364/OE.27.012264</a></p>
 
 
+ <h3>2018年</h3>
                                         
-                                        <h3>2018年</h3>
-                                        
-                                      <p>[41]	Luo Gu, Dewen Cheng*, Qiwei Wang, Qichao Hou, and Yongtian Wang. “Design of a two-dimensional stray-light-free geometrical waveguide head-up display,” <strong>Applied Optics</strong>, 57(31): 9246-8256, 2018.<a href="https://dx.doi.org/10.1364/AO.57.009246">DOI: 10.1364/AO.57.009246</a></p>
+<p>[41]	Luo Gu, Dewen Cheng*, Qiwei Wang, Qichao Hou, and Yongtian Wang. “Design of a two-dimensional stray-light-free geometrical waveguide head-up display,” <strong>Applied Optics</strong>, 57(31): 9246-8256, 2018.<a href="https://dx.doi.org/10.1364/AO.57.009246">DOI: 10.1364/AO.57.009246</a></p>
 
 <p>[40]	Tong Yang*, Dewen Cheng, and Yongtian Wang*. “Design method of nonsymmetric imaging systems consisting of multiple flat phase elements,” <strong>Optics Express</strong>, 26(19): 25347-25363, 2018.<a href="https://dx.doi.org/10.1364/OE.26.025347"> DOI: 10.1364/OE.26.025347</a></p>
 
