--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -125,9 +125,9 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 
 <p>[71]	Dewen Cheng, Chen Xu*, Tong Yang*, and Yongtian Wang, "Off-axis reflective imaging system design with a conicoid-based freeform surface," <strong>Optics Express</strong>, 30(6), 9590-9603 (2022).<a href="https://doi.org/10.1364/OE.455336"> DOI: 10.1364/OE.455336</a></p>
 
-<p>[70]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong>, 30, 6584-6602 (2022).<a href="https://doi.org/10.1364/OE.452747"> DOI: 10.1364/OE.452747</a></p>
+<p>[70]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong>, 30(5), 6584-6602 (2022).<a href="https://doi.org/10.1364/OE.452747"> DOI: 10.1364/OE.452747</a></p>
 
-<p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong>, 30(5), 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
+<p>[69]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong>, 30(2), 825-845 (2022).<a href="https://doi.org/10.1364/OE.443682"> DOI: 10.1364/OE.443682</a></p>
 
 
 <p>[68]	Dewen Cheng, Jiaxi Duan, Hailong Chen, He Wang, Danyang Li, Qiwei Wang, Qichao Hou, Tong Yang, Weihong Hou, Donghua Wang, Xiaoyu Chi, Bin Jiang, and Yongtian Wang*, "Freeform OST-HMD system with large exit pupil diameter and vision correction capability," <strong>Photonics Research</strong>, 10(1), 21-32 (2022).<a href="https://doi.org/10.1364/PRJ.440018"> DOI: 10.1364/PRJ.440018</a></p>
