--- a/news.html
+++ b/news.html
@@ -61,6 +61,7 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
  
 
+<p>[2022-06-23] 我们有关基于粒子群算法进行二维浮雕光栅AR波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>  
 <p>[2022-06-08] 我们有关基于高斯基曲面的多面共体自由曲面系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2022-06-05] 恭喜左琪、周斐艳、汪希萌、查文杰、李玉银、陈文晨六位同学顺利通过硕士学位论文答辩。</p>
 <div class="row"><div class="col-6"><section class="box feature">
@@ -74,7 +75,18 @@
 <p>[2022-05-20] 我们有关基于自由波面调控全息元件的离轴反射成像系统设计与研制的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>  
 <p>[2022-03-09] 我们有关二次曲面基底自由曲面离轴成像系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p> 
 <p>[2022-02-14] 我们有关紧凑型沉浸式大出瞳直径VR系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
-<p>[2022-01-20] 在第二届“天瞐杯”先进光学遥感设计大赛中，实验室派出的参赛队伍获得<strong>先进光学设计及光电检测组第1名、第3名与优秀奖各1项，新型空间光学遥感技术组优秀奖1项</strong>。</p>                                       
+<p>[2022-01-20] 在第二届“天瞐杯”先进光学遥感设计大赛中，实验室派出的参赛队伍获得<strong>先进光学设计及光电检测组第1名、第3名与优秀奖各1项，新型空间光学遥感技术组优秀奖1项</strong>。</p>    
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/tmb2021a.png" alt="" /></a>
+</section></div>
+<div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/tmb2021b.png" alt="" /></a>
+</section></div>
+</div>
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/tmb2021c.png" alt="" /></a>
+</section></div>
+</div>                                   
 <p>[2022-01-04] 我们有关基于非球面微透镜阵列的超薄多焦集成LED投影的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2021-12-11] 我们有关大出瞳直径、有视度调节功能的自由曲面视透型头戴显示系统设计与研制的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
 <p>[2021-10-10] 实验室教师冯泽心在COS/SPIE Photonics Asia 2021学术会议做<strong>邀请报告</strong>“Iterative freeform lens design for extended light source”。
