--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -119,6 +119,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[74]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).<a href="https://doi.org/10.1364/OE.462384"> DOI: 10.1364/OE.462384</a></p>
+
 <p>[73]	Tong Yang, Lijun Zhou, Dewen Cheng*, and Yongtian Wang, "Designing reflective imaging systems with multiple-surfaces-integrated elements using a Gaussian function freeform surface," <strong>Applied Optics</strong>, 61(17), 5215-5225 (2022).<a href="https://doi.org/10.1364/AO.460955"> DOI: 10.1364/AO.460955</a></p>
 
 <p>[72]	Tong Yang, Yongdong Wang, Dongwei Ni, Dewen Cheng*, and Yongtian Wang, "Design of off-axis reflective imaging systems based on freeform holographic elements," <strong>Optics Express</strong>, 30(11), 20117-20134 (2022).<a href="https://doi.org/10.1364/OE.460351"> DOI: 10.1364/OE.460351</a></p>
