--- a/publications.html
+++ b/publications.html
@@ -99,7 +99,9 @@ a:active {
 										<h2 class="major"><span>期刊论文</span></h2>
 
 
-<h3>2022年</h3>
+<h3>2022年</h3
+
+<p>[74]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).<a href="https://doi.org/10.1364/OE.462384"> DOI: 10.1364/OE.462384</a></p>
 
 <p>[73]	Tong Yang, Lijun Zhou, Dewen Cheng*, and Yongtian Wang, "Designing reflective imaging systems with multiple-surfaces-integrated elements using a Gaussian function freeform surface," <strong>Applied Optics</strong>, 61(17), 5215-5225 (2022).<a href="https://doi.org/10.1364/AO.460955"> DOI: 10.1364/AO.460955</a></p>
 
