--- a/yt_personal.html
+++ b/yt_personal.html
@@ -74,7 +74,7 @@
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、北京市自然科学基金、国家重点研发计划等项目。以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021影响因子17.782）、Optics Express等期刊发表论文20余篇。已获得授权发明专利30余项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
+<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像、衍射与微纳光学等方面。主持或参与国家自然科学基金、北京市自然科学基金、国家重点研发计划等项目。以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021影响因子17.782）、Optics Express等期刊发表论文20余篇。已获得授权发明专利40项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得国家奖学金、校级或市级优秀毕业生等荣誉称号，或者在光学设计竞赛中获奖。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
@@ -85,7 +85,7 @@
 <p>2017.08-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
 <h3>研究领域</h3>
-<p>自由曲面光学、光学设计、光学成像、机器学习、增强现实、衍射与微纳光学</p>
+<p>自由曲面光学、光学设计、光学与计算成像、衍射与微纳光学、增强现实、机器学习</p>
 
 <h3>主讲课程</h3>
 <p>主讲本科生课程《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
@@ -160,6 +160,7 @@
 <p>[35]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong> 3, 100072 (2021).</p>
 <p>[36]	Yue Liu, Dewen Cheng*, Tong Yang, Hailong Chen, Luo Gu, Dongwei Ni, and Yongtian Wang, "Ultra-thin multifocal integral LED-projector based on aspherical microlens arrays," <strong>Optics Express</strong> 30, 825-845 (2022).</p>
 <p>[37]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong> 30, 6584-6602 (2022).</p>
+<p>[38]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).</p>
 
 
 
