--- a/members.html
+++ b/members.html
@@ -183,7 +183,7 @@
                                                             <p class="class2" align="left">博士 特别副研究员 博士生导师</p>
 <p class="class2" align="left">入选中国科协青托、光学工程学会优博</p>
                                                            
-                                                            <p class="class2" align="left">研究方向：自由曲面光学、光学设计、新型光学成像、机器学习、衍射光学</p>
+                                                            <p class="class2" align="left">研究方向：自由曲面光学、光学设计、新型光学成像、全息光学、微纳光学</p>
 
                                                             <p class="class2" align="left">博士：清华大学</p>
                                                             <p class="class2" align="left">Email：yangtong@bit.edu.cn</p>
@@ -1282,6 +1282,61 @@
 																</tr>
 															</thead>
 															<tbody>
+                                                                                                                            <tr>
+																	<td>王其为</td>
+																	<td>2017-2022 博士</td>
+																	<td>几何阵列分光波导近眼显示关键技术研究</td>
+                                                                    <td>耐德佳</td>
+                                                                    <td></td>
+																</tr>
+                                                              <tr>
+																	<td>刘悦</td>
+																	<td>2016-2022 博士</td>
+																	<td>基于微透镜阵列的集成投影光学系统设计方法研究</td>
+                                                                    <td>上海交通大学博士后</td>
+                                                                    <td>光学设计大赛第一名、<br/>光学遥感设计大赛第一名</td>
+																</tr>
+                                                                                                                                <tr>
+																	<td>李玉银</td>
+																	<td>2019-2022 硕士</td>
+																	<td>立体投影坐标系下LED自由曲面透镜的自动化构建</td>
+                                                                    <td>华为</td>
+                                                                    <td>国家奖学金、<br/>北理工优秀硕士学位论文</td>
+																</tr>
+                                                                                                                                <tr>
+																	<td>周斐艳</td>
+																	<td>2019-2022 硕士</td>
+																	<td>基于双目显示设备的视觉舒适度评测方法及应用的研究</td>
+                                                                    <td>京东方</td>
+                                                                    <td></td>
+																</tr>
+<tr>
+																	<td>左琪</td>
+																	<td>2019-2022 硕士</td>
+																	<td>平视显示系统设计与虚像距测试方法研究</td>
+                                                                    <td>华为</td>
+                                                                    <td></td>
+																</tr>                                                                                                                                <tr>
+																	<td>汪希萌</td>
+																	<td>2019-2022 硕士</td>
+																	<td>超薄一维几何阵列分光波导AR近眼显示系统研究</td>
+                                                                    <td>北理工继续读博深造</td>
+                                                                    <td></td>
+																</tr>
+                                                                                                                                
+<tr>
+																	<td>陈文晨</td>
+																	<td>2019-2022 硕士</td>
+																	<td>基于深度学习的自由曲面成像系统初始结构生成方法研究</td>
+                                                                    <td>华为</td>
+                                                                    <td>国家奖学金、<br/>北理工优秀硕士学位论文、<br/>北京市优秀毕业生、<br/>北理工优秀毕业生</td>
+																</tr>                                                                                                                                  <tr>
+																	<td>查文杰</td>
+																	<td>2019-2022 硕士</td>
+																	<td>增强现实头戴显示的关键光学参数测试</td>
+                                                                    <td>TP-LINK</td>
+                                                                    <td></td>
+																</tr>  
                                                                 <tr>
 																	<td>雷卫星</td>
 																	<td>2018-2021 硕士</td>
@@ -1329,7 +1384,7 @@
 																	<td>姚成</td>
 																	<td>2015-2021 博士</td>
 																	<td>基于透镜阵列的近眼光场显示技术研究</td>
-                                                                    <td>耐德佳博士后</td>
+                                                                    <td>耐德佳</td>
                                                                     <td>国际会议Best Poster Award</td>
 																</tr>                                                                
                                                                 <tr>
