--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -119,6 +119,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[75]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).<a href="https://doi.org/10.1364/AO.459644"> DOI: 10.1364/AO.459644</a></p>
+
 <p>[74]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).<a href="https://doi.org/10.1364/OE.462384"> DOI: 10.1364/OE.462384</a></p>
 
 <p>[73]	Tong Yang, Lijun Zhou, Dewen Cheng*, and Yongtian Wang, "Designing reflective imaging systems with multiple-surfaces-integrated elements using a Gaussian function freeform surface," <strong>Applied Optics</strong>, 61(17), 5215-5225 (2022).<a href="https://doi.org/10.1364/AO.460955"> DOI: 10.1364/AO.460955</a></p>
