--- a/news.html
+++ b/news.html
@@ -60,7 +60,10 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
  
-
+<p>[2022-06-29] 我们有关大视场二维扩瞳几何阵列波导AR系统设计方法的论文在线发表于<strong>Applied Optics</strong>。</p>
+<p>[2022-06-27] 实验室2022届研究生毕业。感谢王其为、刘悦、左琪、周斐艳、汪希萌、查文杰、李玉银、陈文晨8位同学为实验室作出的贡献，祝大家前程似锦！</p>
+<p>[2022-06-27] 祝贺陈文晨、李玉银2位同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
+<p>[2022-06-27] 祝贺陈文晨同学被评为<strong>北京市优秀毕业生</strong>和<strong>北京理工大学优秀毕业生</strong>。</p>
 <p>[2022-06-23] 我们有关基于粒子群算法进行二维浮雕光栅AR波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>  
 <p>[2022-06-08] 我们有关基于高斯基曲面的多面共体自由曲面系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2022-06-05] 恭喜左琪、周斐艳、汪希萌、查文杰、李玉银、陈文晨六位同学顺利通过硕士学位论文答辩。</p>
