--- a/publications.html
+++ b/publications.html
@@ -99,7 +99,10 @@ a:active {
 										<h2 class="major"><span>期刊论文</span></h2>
 
 
-<h3>2022年</h3
+<h3>2022年</h3>
+
+
+<p>[75]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).<a href="https://doi.org/10.1364/AO.459644"> DOI: 10.1364/AO.459644</a></p>
 
 <p>[74]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).<a href="https://doi.org/10.1364/OE.462384"> DOI: 10.1364/OE.462384</a></p>
 
