--- a/members.html
+++ b/members.html
@@ -1293,7 +1293,7 @@
 																	<td>刘悦</td>
 																	<td>2016-2022 博士</td>
 																	<td>基于微透镜阵列的集成投影光学系统设计方法研究</td>
-                                                                    <td>上海交通大学博士后</td>
+                                                                    <td>西安交通大学博士后</td>
                                                                     <td>光学设计大赛第一名、<br/>光学遥感设计大赛第一名</td>
 																</tr>
                                                                                                                                 <tr>
