--- a/news.html
+++ b/news.html
@@ -60,6 +60,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
  
+<p>[2022-07-02] 我们有关AR头戴显示器设计与制造的综述论文入选<strong>Light: Advanced Manufacturing期刊2021年度优秀论文</strong>（共10篇论文入选）。<a href="https://www.light-am.com/article/doi/10.37188/lam.2021.024">论文链接</a></p>  
 <p>[2022-06-29] 我们有关大视场二维扩瞳几何阵列波导AR系统设计方法的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2022-06-27] 实验室2022届研究生毕业。感谢王其为、刘悦、左琪、周斐艳、汪希萌、查文杰、李玉银、陈文晨8位同学为实验室作出的贡献，祝大家前程似锦！</p>
 <p>[2022-06-27] 祝贺陈文晨、李玉银2位同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
